cmake_minimum_required(VERSION 3.23)
project(FDP_con_C)
set(CMAKE_CXX_STANDARD 17)


add_executable(Ejercicio1 /College/Serie de ejercicios/Ejercicio1.cpp
        "College/Serie de ejercicios/Ejercicio15.cpp"
        CourseMastermind/Capitulo_2/Funciones/funcion_power.c
        CourseMastermind/Capitulo_2/Reto/CifradoCesar.c
        CourseMastermind/Capitulo_3/Busqueda.c
        CourseMastermind/Capitulo_3/Ordenacion.c
        CourseMastermind/Capitulo_3/Reto.c
        CourseMastermind/Capitulo_3/EncuentraPatron.c
)
add_executable(Ejercicio2 /College/Serie de ejercicios/Ejercicio2.cpp)
add_executable(Ejercicio3 /College/Serie de ejercicios/Ejercicio3.cpp)
add_executable(Ejercicio4 /College/Serie de ejercicios/Ejercicio4.cpp)
add_executable(Ejercicio5 "College/Serie de ejercicios/Ejercicio5.cpp")
add_executable(Ejercicio6 /College/Serie de ejercicios/Ejercicio6.cpp)
add_executable(Ejercicio7 /College/Serie de ejercicios/Ejercicio7.cpp)
add_executable(Ejercicio8 /College/Serie de ejercicios/Ejercicio8.cpp)
add_executable(Ejercicio9 /College/Serie de ejercicios/Ejercicio9.cpp)
add_executable(Ejercicio10 /College/Serie de ejercicios/Ejercicio10.cpp)
add_executable(Ejercicio11 /College/Serie de ejercicios/Ejercicio11.cpp)
add_executable(Ejercicio12 /College/Serie de ejercicios/Ejercicio12.cpp)
add_executable(Ejercicio13 /College/Serie de ejercicios/Ejercicio13.cpp)
add_executable(Ejercicio14 /College/Serie de ejercicios/Ejercicio14.cpp)
add_executable(Ejercicio15 /College/Serie de ejercicios/Ejercicio15.cpp)
add_executable(Ejercicio16 /College/Serie de ejercicios/Ejercicio16.cpp)









